--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     body {
         line-height: inherit;
-        margin: 0
+        margin: 0;
+        background: hsl(192, 100%, 74%);
     }
 
     hr {
@@ -308,12 +309,12 @@
     <script type="module" src="/esp-weather-station/assets/entry.98e87812.js" crossorigin></script>
 </head>
 <body>
-<div id="__nuxt">
-    <div>
-        <div class="container mx-auto text-center">
-            <h1 class="text-2xl font-bold">The Forecaster</h1>
-            <p>Weather System</p></div>
-    </div>
+<div class="container mx-auto" style="text-align: center">
+    <h1 class="font-bold" style="font-size: xxx-large">The Forecast Station</h1>
+    <p>Predicting weather from surrounding readings from sensors.</p>
+</div>
+<div style="background: #e2e2e2">
+
 </div>
 <script type="application/json" id="__NUXT_DATA__" data-ssr="true" data-src="/esp-weather-station/_payload.json">[
     {
