--- a/index.html
+++ b/index.html
@@ -309,12 +309,10 @@
     <script type="module" src="/esp-weather-station/assets/entry.98e87812.js" crossorigin></script>
 </head>
 <body>
-<div class="container mx-auto" style="text-align: center">
-    <h1 class="font-bold" style="font-size: xxx-large">The Forecast Station</h1>
-    <p>Predicting weather from surrounding readings from sensors.</p>
-</div>
-<div style="background: #e2e2e2">
-
+<div class="__nuxt">
+    <div>
+    <h1 class="font-bold">The Forecast Station</h1>
+    <p>Predicting weather from surrounding readings from sensors.</p></div>
 </div>
 <script type="application/json" id="__NUXT_DATA__" data-ssr="true" data-src="/esp-weather-station/_payload.json">[
     {
