--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
 
     body {
         line-height: inherit;
-        margin: 0;
-        background: hsl(192, 100%, 74%);
+        margin: 0
     }
 
     hr {
@@ -309,10 +308,11 @@
     <script type="module" src="/esp-weather-station/assets/entry.98e87812.js" crossorigin></script>
 </head>
 <body>
-<div class="__nuxt">
+<div id="__nuxt">
     <div>
-    <h1 class="font-bold">The Forecast Station</h1>
-    <p>Predicting weather from surrounding readings from sensors.</p></div>
+        <div class="ma-10"><h1 class="text-2xl font-bold">The Forecaster</h1>
+            <p>Weather System</p></div>
+    </div>
 </div>
 <script type="application/json" id="__NUXT_DATA__" data-ssr="true" data-src="/esp-weather-station/_payload.json">[
     {
